testing made some changes

--- a/code/python-basics.ipynb
+++ b/code/python-basics.ipynb
@@ -46,7 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"You ran me!\")"
+    "print(\"You ran me!\")\n",
+    "print(\"I made a change to the code!\")"
    ]
   },
   {
